# gpt-solver

./: .gitignore  README.md  mcp-servers.json  pyproject.toml
src/pandora/: __init__.py  __main__.py  cli.py  config.py  definitions.py  engine.py  log.py  mcp_servers_handler.py  system_config.py  tools.py  types.py
src/pandora/core/: engine.py  state.py  tool_executor.py
src/pandora/definitions/: __init__.py  tool_definitions.py
src/pandora/mcp/: config.py  handler.py
src/pandora/tools/: __init__.py  base.py  bash.py  file_ops.py  messaging.py  planning.py  web.py
